work. More work needs to be done before Ski user emulation can run real
world programs.

** Dropped outdated ski.spec from tarball.

** Dropped ski-config from installed files. Ski does not provide a
stable library interface.

** Dropped dynamic hook loading infrastructure support. Ski no longer
tries to load and execute any libraries via 'SKIHOOK_PATH'. LTDL is
not required anymore.

* What's New with Ski 1.1.0

... some release entries are skipped ...

** Version numbers have been changed to reflect the old Linux
kernel practice -- x.y.z, where 'x' is major changes, 'y' is
even for stable versions, odd for development/unstable versions,
and 'z' is a patch level.  There will also be x.y.z-d numbers
here and there, for example on the Debian packages; when 'd' 
changes, there's been a change to the way ski is packaged, but
not how it functions.

** Ski has been updated for the latest IA-64 architecture revision
(SDM 2.2).

* What's New With Ski v0.9.81-1

** Ski has been updated for the latest IA-64 architecture 
revision (SDM v2.1). In particular, support for the 16-byte atomic 
operations has been added. 

** The cstack command now works and displays a backtrace of the current 
call-stack. 

** Ski now additionally picks up symbol information from the dynamic 
symbol table section, if it exists. 

** The auto-detection of user- vs. system-mode should now be 
more reliable. If a program is linked for region 0 (as is the case 
for the Linux bootloader, for example), system-mode is assumed 
by default. Auto-detection can be overridden with command line 
options -forceuser and -forcesystem. 

** The Linux version of the X11 app-defaults file (XSki) has been 
updated to add a binding for the backspace key and to default 
the background color to gray. 

** An IA-64 binary of Ski is now available

* What's New With Ski v0.9.77-1

** Merged ski v0943l3  from David Mosberger <davidm@hpl.hp.com> with
ski 0.977. Added new autoconf/automake build environment.
